# test-framework-design

./: .gitignore  README.md  project-address.md
01_chapter/poetry-demo/: pyproject.toml
01_chapter/pytest_extend/: conftest.py  test_sample.py
01_chapter/test_framework/: test_sample_1.py  test_sample_2.py  test_sample_3.py  test_sample_4.py
02_chapter/: result.html  result.json  test_jsonrunner.py
02_chapter/jinja2_demo/: demo_01.py  demo_02.py  jinja2_table.py
02_chapter/jsonrunner/: runner.py
03_chapter/: parameterized_expend_demo.py
03_chapter/extend/: data_conversion.py  parameterized_extend.py
03_chapter/libs_demo/: ddt_demo.py  (+2 more)
04_chapter/: complex_sql.sql  complex_sql_to_json.json  test_mysql_operate.py
05_chapter/: test_testdata.py
06_chapter/kb/: README.md  pyproject.toml
07_chapter/: test_cache.py  test_color_logging.py  test_depend.py  test_exception.py  test_if_depend.py  test_label.py  test_lru_cache.py  test_my_logging.py  test_redis_cache.py
08_chapter/: test_assert.py  test_se_api_four.py  test_se_api_one.py  test_se_api_three.py  test_se_api_two.py
09_chapter/: appium_image_demo.py  test_appium_lab.py  test_appium_ocr.py
10_chapter/: test_assert_v2.py  test_curl.py  test_dependence.py  test_dependence_more.py  test_get_token.py  test_request_v1.py  test_request_v2.py  test_response.py  test_websocket.py
11_chapter/: test_bot_style.py  test_hybrid_style.py  test_page_object.py  test_poium_app.py  test_poium_core.py  test_poium_web.py  test_shop.py  test_spf_demo.py
12_chapter/: run.py
article/: test_framework.md
(+88 files in other folders)
